[package]
name = "x264-sys"
version = "0.3.2"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "FFI bindings to x264"
repository = "https://github.com/rust-av/x264-rs"
edition = "2018"
links = "x264"

[build-dependencies]
bindgen = "0.71.0"
system-deps = "7.0.3"

[target.'cfg(windows)'.build-dependencies]
reqwest = { version = "0.12.23", features = ["blocking", "rustls-tls"] }
zip = "6.0.0"

[package.metadata.system-deps]
x264 = "0.147"

[dependencies]
